add InputField commit

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,8 +3,11 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2023",
     "lib": ["ES2023"],
+    "types": ["react", "react-dom", "node"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "jsx": "react-jsx",
+    
 
     /* Bundler mode */
     "moduleResolution": "bundler",
