--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "ROLLUP_SKIP_NATIVE_BUILD=true storybook build",
+    "build": "ROLLUP_SKIP_NATIVE_BUILD=true vite build"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -34,6 +34,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^9.1.2",
     "globals": "^16.3.0",
+    "rollup": "^4.13.0",
     "storybook": "^9.1.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
