--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "vite",
     "lint": "eslint .",
+    "build": "vite build",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "ROLLUP_SKIP_NATIVE_BUILD=true storybook build",
-    "build": "ROLLUP_SKIP_NATIVE_BUILD=true vite build"
+  "storybook": "storybook dev -p 6006",
+  "build-storybook": "storybook build",
+  "postinstall": "npm rebuild lightningcss --force"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
