--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "eslint .",
     "build": "vite build",
     "preview": "vite preview",
-  "storybook": "storybook dev -p 6006",
-  "build-storybook": "storybook build -o storybook-static",
-  "postinstall": "npm rebuild lightningcss --force"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build -o storybook-static",
+    "postinstall": "npm rebuild lightningcss --force",
+    "chromatic": "npx chromatic --project-token=chpt_76874a2a3a2ad33"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -30,6 +31,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "chromatic": "^13.1.3",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
